Prevent the buttons on the home page from overlapping the content.

--- a/app/stylesheets/pages/_welcome.scss
+++ b/app/stylesheets/pages/_welcome.scss
@@ -4,14 +4,11 @@
 		
 		> .layout-item {
 			position: relative;
-			
-			footer {
-				position: absolute;
-				bottom: 0;
-				right: 0;
-			}
 		}
 	}
+	
+	.notices { width: 400px; margin-left: 20px; }
+	.events { width: 440px; }
 	
 	.content-body {
 		section  {
